# game-music-emu

./: .gitignore  Android.mk  CMakeLists.txt  bitbucket-pipelines.yml  build.zig  build.zig.zon  changes.txt  gme.txt  readme.txt  test.m3u
.github/workflows/: CI-Android.yml  CI-Linux.yml  CI-MacOS.yml  CI-MinGW.yml  CI-Windows.yml  CI-build.yml
cmake/: FindUNRAR.cmake
demo/: CMakeLists.txt  Wave_Writer.cpp  Wave_Writer.h  basics.c  basics_multi.c  features.c
gme/: Ay_Apu.cpp  Ay_Apu.h  Ay_Cpu.cpp  Ay_Cpu.h  Ay_Emu.cpp  Ay_Emu.h  Blip_Buffer.cpp  Blip_Buffer.h  CMakeLists.txt  Classic_Emu.cpp  Classic_Emu.h  Data_Reader.cpp  Data_Reader.h  Dual_Resampler.cpp  Effects_Buffer.cpp  Effects_Buffer.h  Fir_Resampler.cpp  Fir_Resampler.h  GZipHelper.h  Gb_Apu.cpp  Gb_Apu.h  Gb_Cpu.cpp  Gb_Cpu.h  Gb_Oscs.cpp  Gb_Oscs.h  Gbs_Emu.cpp  Gme_File.cpp  Gme_File.h  Gym_Emu.cpp  Hes_Apu.cpp  Hes_Apu.h  Hes_Apu_Adpcm.cpp  Hes_Apu_Adpcm.h  Hes_Cpu.cpp  Hes_Cpu.h  Hes_Emu.cpp  Hes_Emu.h  Kss_Cpu.cpp  Kss_Cpu.h  Kss_Emu.cpp  (+71 more)
gme/ext/: emu2413.c
player/: Archive_Reader.cpp  Archive_Reader.h  Audio_Scope.cpp  Audio_Scope.h  CMakeLists.txt  Music_Player.cpp  Music_Player.h  player.cpp
test/: Makefile  Wave_Writer.cpp  Wave_Writer.h  basics.c  test.sh
zig/: basics.zig  gme.zig
